Add some entity